--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">AndroidPhotos15</string>
-    <string name="searchBtnTxt">str</string>
+    <string name="searchBtnTxt">Search</string>
 </resources>
